# argilla

./: .codecov.yml  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pyre_configuration  .readthedocs.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  alembic.ini  codecov.yml  commitlint.config.js  condaenv.dmdhthz9.requirements.txt  dev.Dockerfile  docker-compose.elasticsearch.yaml  docker-compose.opensearch.yaml  docker-compose.yaml  elasticsearch_vector_search_use_case.ipynb  emojis.js  emojis.py  environment_dev.yml  environment_docs.yml  opensearch.compose.yaml  poetry_pyproject.toml.bkp  pull_request_template.md  pyproject.toml  pytest.ini  quickstart.Dockerfile  quickstart.README.md  release.Dockerfile  setting-up-argilla.ipynb  setup.cfg  setup.py  (+5 more)
argilla/: .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE_HEADER  README.md  environment_dev.yml  migration_legacy_datasets.ipynb  mkdocs.yml  pyproject.toml  setup.py
argilla-server/: .env.dev  .env.test  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE_HEADER  README.md  log_config.yaml  pyproject.toml
argilla-server/docker/argilla-hf-spaces/: Dockerfile  Procfile  README.md  requirements.txt
argilla-server/docker/argilla-hf-spaces/config/: elasticsearch.yml
argilla-server/docker/argilla-hf-spaces/scripts/: argilla_home_backup_cron.py  db_backup_cron.py  restore_argilla_backup.py  start.sh  start_argilla_server.sh
argilla-server/docker/quickstart/: Dockerfile  README.md  requirements.txt
argilla-server/docker/quickstart/config/: elasticsearch.yml
argilla-server/docker/quickstart/scripts/: start_argilla_server.sh
argilla-server/docker/server/: Dockerfile  README.md
argilla-server/docker/server/scripts/: start_argilla_server.sh
argilla-server/scripts/: build_distribution.sh  build_frontend.sh
argilla-server/src/argilla_server/: __init__.py  __main__.py  _app.py  _version.py  alembic.ini  constants.py  database.py  enums.py  helpers.py  logging.py  policies.py  settings.py  static_rewrite.py  telemetry.py  utils.py
argilla-server/src/argilla_server/alembic/: env.py
argilla-server/src/argilla_server/api/: routes.py
argilla-server/src/argilla_server/apis/: routes.py
argilla-server/src/argilla_server/bulk/: records_bulk.py
argilla-server/src/argilla_server/cli/: __main__.py  rich.py  start.py  typer_ext.py  worker.py
argilla-server/src/argilla_server/commons/: config.py
argilla-server/src/argilla_server/contexts/: accounts.py  datasets.py  distribution.py  hub.py  info.py  questions.py  records.py  search.py  settings.py  webhooks.py
argilla-server/src/argilla_server/daos/: datasets.py  records.py
argilla-server/src/argilla_server/errors/: __init__.py  base_errors.py  error_handler.py  task_errors.py
argilla-server/src/argilla_server/jobs/: __init__.py  dataset_jobs.py  hub_jobs.py  (+2 more)
argilla-server/tests/: __init__.py  conftest.py  database.py  factories.py
argilla-server/tests/profiling/: conftest.py  test_records_bulk.py
argilla-server/tests/unit/: conftest.py  test_api_telemetry.py  test_app.py  test_database.py  test_endpoints_telemetry.py  test_logging.py  test_utils.py
argilla-v1/: CHANGELOG.md  README.md  environment_dev.yml  pyproject.toml
argilla-v1/scripts/: end2end_examples.py
argilla-v1/src/argilla_v1/: __init__.py  __main__.py  _version.py  errors.py
argilla-v1/tests/: __init__.py
argilla-v1/tests/integration/: helpers.py  test_datasets_settings.py  test_delete_records_from_datasets.py  test_log_for_token_classification.py
argilla-v1/tests/unit/: conftest.py  test__init__.py
argilla-v2/: README.md  pyproject.toml
argilla-v2/src/argilla_v2/: __init__.py
argilla-v2/tests/: test_imports.py
argilla/docs/: CNAME  index.md
argilla/docs/community/: contributor.md  developer.md  index.md  sample_publications.csv  token_classification_tutorial.ipynb  token_classification_tutorial.md  token_classification_tutorial.qmd
argilla/docs/getting_started/: faq.md  how-to-configure-argilla-on-huggingface.md  how-to-deploy-argilla-with-docker.md  huggingface-spaces.md  installation.md  quickstart.md
argilla/docs/how_to_guides/: annotate.md  custom_fields.md  dataset.md  distribution.md  export.md  image_field.md  import_export.md  index.md  making_most_of_markdown.md  migrate_from_legacy_datasets.md  query.md  query_export.md  record.md  record.md.orig  use_markdown_to_format_rich_content.md  user.md  webhooks.md  webhooks_internals.md  workspace.md
argilla/docs/reference/: telemetry.md
argilla/docs/scripts/: gen_popular_issues.py
argilla/docs/stylesheets/: extra.css
argilla/docs/tutorials/: image_classification.ipynb  image_preference.ipynb  index.md  text_classification.ipynb  text_classification_setfit.ipynb  token_classification.ipynb
argilla/examples/: working_in_draft_mode.ipynb
argilla/scripts/: end2end_examples.py
argilla/src/argilla/: __init__.py  _constants.py  _resource.py  _version.py  client.py  media.py  responses.py  suggestions.py  vectors.py
argilla/tests/integration/: conftest.py  helpers.py  test_add_records.py  test_client.py  test_create_datasets.py  test_dataset_workspace.py  test_datasets_settings.py  test_delete_records.py  test_empty_settings.py  test_export_dataset.py  test_export_features.py  test_export_records.py  test_import_features.py  test_list_records.py  test_listing_datasets.py  test_log_for_text_classification.py  test_manage_metadata.py  test_manage_users.py  test_manage_workspaces.py  test_metadata.py  test_publish_datasets.py  test_query_records.py  test_ranking_questions.py  test_search_records.py  test_update_dataset_settings.py  test_update_records.py  test_vectors.py  utils.py
argilla/tests/pydantic_v1/: __init__.py  generics.py
argilla/tests/unit/: conftest.py  test__init__.py  test_interface.py  test_logging.py  test_markdown.py  test_media.py  test_record_fields.py  test_record_ingestion.py  test_record_responses.py  test_record_suggestions.py
(+9357 files in other folders)
