[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argilla"
description = "Open-source tool for exploring, labeling, and monitoring data for NLP projects."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
keywords = [
    "data-science",
    "natural-language-processing",
    "text-labeling",
    "data-annotation",
    "artificial-intelligence",
    "knowledged-graph",
    "developers-tools",
    "human-in-the-loop",
    "mlops"
]
authors = [
    {name = "argilla", email = "contact@argilla.io"}
]
maintainers = [
    {name = "argilla", email = "contact@argilla.io"}
]
dependencies = [
    # Client
    "httpx >= 0.15,< 0.24",
    "deprecated ~= 1.2.0",
    "packaging >= 20.0",
    # pandas -> For data loading
    "pandas >=1.0.0,<2.0.0",
    # Aligned pydantic version with server fastAPI
    "pydantic >= 1.7.1",
    # monitoring
    "wrapt >= 1.13,< 1.15",
    # weaksupervision
    "numpy < 1.24.0",
    # for progressbars
    "tqdm >= 4.27.0",
    # monitor background consumers
    "backoff",
    "monotonic",
    # for logging, tracebacks, printing, progressbars
    "rich <= 13.0.1"
]
dynamic = ["version"]

[project.optional-dependencies]
server = [
    # Basic dependencies
    "fastapi >= 0.75,< 0.89",
    "opensearch-py >= 1.0,< 2.1",
    "elasticsearch >=7.11.0,< 8.6.0",
    "uvicorn[standard] >= 0.15.0,< 0.21.0",
    "smart-open",
    "brotli-asgi >= 1.1,< 1.3",
    "Deprecated ~= 1.2.0",
    # Advanced query search dsl
    "luqum >= 0.11,< 0.13",
    # metrics
    "scikit-learn >= 0.24.2",
    # Statics server
    "aiofiles>=0.6,<22.2",
    "PyYAML>=5.4.1,<6.1.0",
    # security dependencies
    "python-multipart~=0.0.5",
    "python-jose[cryptography]>=3.2,<3.4",
    "passlib[bcrypt]~=1.7.4",
    # Info status
    "psutil >= 5.8,< 5.10",
    # Telemetry
    "segment-analytics-python == 2.2.0"
]
listeners = [
    "schedule ~= 1.1.0",
    "prodict ~= 0.8.0"
]

[project.urls]
homepage = "https://www.argilla.io"
documentation = "https://docs.argilla.io"
repository = "https://github.com/argilla-io/argilla"

[tool.setuptools.dynamic]
version = {attr = "argilla.__version__"}

[tool.pytest.ini_options]
log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = "True"
testpaths = [
    "tests"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if _TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:"
]

[tool.isort]
profile = "black"

[tool.ruff]
# Ignore line length violations
ignore = ["E501"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
# Ignore imported but unused;
"__init__.py" = ["F401"]

[tool.black]
line-length = 120
