[metadata]
name = rubrix
description = Open-source tool for exploring, labeling, and monitoring data for NLP projects.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = data-science natural-language-processing text-labeling data-annotation artificial-intelligence knowledged-graph developers-tools human-in-the-loop mlops
license = Apache-2.0
url = https://recogn.ai
author = recognai
author_email = contact@recogn.ai
maintainer = recognai
maintainer_email = contact@recogn.ai

[options]
package_dir =
  =src
packages = find:
python_requires = >=3.7
install_requires =
  httpx ~= 0.15.0
  # Client
  # pandas -> For data loading
  pandas >=1.0.0,<2.0.0
  # Aligned pydantic version with server fastAPI
  pydantic >= 1.7.1
  # monitoring
  wrapt ~= 1.13.0
  # weaksupervision
  numpy
  tqdm >= 4.27.0

[options.packages.find]
where = src

[options.package_data]
* =
    server/static/*
    server/static/**/*
    server/static/**/**/*
    server/static/**/**/**/*
    server/static/**/**/**/**/*


[options.extras_require]
server =
    # Basic dependencies
    fastapi ~= 0.75.0
    opensearch-py ~= 1.0.0
    uvicorn[standard] >= 0.15.0,<0.18.0
    smart-open
    brotli-asgi ~= 1.1.0
    Deprecated ~= 1.2.0
    # Advanced query search dsl
    luqum ~= 0.11.0
    # metrics
    scikit-learn >= 0.24.2
    # Words cloud
    stopwordsiso ~= 0.6.1
    # Statics server
    aiofiles~=0.6.0
    PyYAML~=5.4.1
    # security dependencies
    python-multipart~=0.0.5
    python-jose[cryptography]~=3.2.0
    passlib[bcrypt]~=1.7.4
    # Info status
    hurry.filesize
    psutil ~= 5.8.0
