[metadata]
name = rubrix
description = Open-source tool for exploring, labeling, and monitoring data for NLP projects.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = data-science natural-language-processing text-labeling data-annotation artificial-intelligence knowledged-graph developers-tools human-in-the-loop mlops
license = Apache-2.0
url = https://recogn.ai
author = recognai
author_email = contact@recogn.ai
maintainer = recognai
maintainer_email = contact@recogn.ai

[options]
package_dir =
  =src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
* =
    server/static/*
    server/static/**/*
    server/static/**/**/*
    server/static/**/**/**/*
    server/static/**/**/**/**/*


