[metadata]

url = https://recogn.ai

[options]
package_dir =
  =src
packages = find:

[options.packages.find]
where = src
exclude = rubrix.server.static

[options.package_data]
* =
    server/static/*
    server/static/**/*
    server/static/**/**/*
    server/static/**/**/**/*
    server/static/**/**/**/**/*


