[project]
name = "argilla"
version = "2.0.0"
description = "The new Argilla package"
authors = [
    { name = "argilla", email = "contact@argilla.io" },
]
dependencies = [
    "argilla-sdk @ file:///${PROJECT_ROOT}/../argilla-sdk",
    "argilla-v1[listeners] @ file:///${PROJECT_ROOT}/../argilla-v1",
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.18.1",
    "jupyter>=1.0.0",
]
