[project]
name = "argilla"
description = "The Argilla python server SDK"
authors = [
    {name = "Argilla", email = "contact@argilla.io"},
]
requires-python = ">=3.9,<=3.12"
readme = "README.md"
license = {text = "Apache 2.0"}

dynamic = ["version"]

dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.6.0, <3.0.0",
    "argilla-v1[listeners]"
]

[project.optional-dependencies]
io = [
    "datasets>=2.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/argilla/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.12.3",
    "pytest>=7.4.4",
    "flake8>=5.0.4",
    "ruff>=0.1.12",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.26.0",
    "black>=23.12.1",
    "build>=1.0.3",
    "pre-commit>=3.5.0",
    "mkdocs-material >= 9.5.17",
    "mkdocstrings[python] >= 0.24.0",
    "mkdocs-literate-nav >= 0.6.1",
    "mkdocs-section-index >= 0.3.8",
    "mkdocs-gen-files >= 0.5.0",
    "mkdocs-open-in-new-tab >= 1.0.3",
    "mike >= 2.0.0",
    "Pillow >= 9.5.0",
    "CairoSVG >= 2.7.1",
    "mknotebooks >= 0.8.0",
    "datasets>=2.19.1",
    "argilla-v1[listeners] @ file:///${PROJECT_ROOT}/../argilla-v1",
]

[tool.pdm.scripts]
test = "pytest tests"
lint = "ruff check"
format = "black ."
all = {composite = ["format", "lint", "test"]}


